--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div id="container">
         <h1>Dice Roller Program</h1>
+        <h6>© Copyright by Le Trung Hieu</h6>
         <label>Number of dice:</label>
         <input type="number" value="1" min="1" id="numOfDice">
         <button onclick="rollDice()">Roll</button>
